# library-hub

./: .gitignore  README.md  azure-setup.ps1  deploy.ps1  docker-compose.yml  mutmut.sh
catalog-service/: .env.example  Dockerfile  conftest.py  pyproject.toml  pytest.ini  seed_books.sql
catalog-service/src/catalog/: __init__.py  main.py
catalog-service/src/catalog/application/: add_book_use_case.py  check_availability_use_case.py  get_book_use_case.py  reserve_book_use_case.py  return_book_use_case.py  search_books_use_case.py
catalog-service/src/catalog/config/: settings.py
catalog-service/src/catalog/domain/: book.py  book_stock.py  isbn.py
catalog-service/src/catalog/domain/ports/: __init__.py  book_repository.py  book_stock_repository.py  message_publisher.py
catalog-service/src/catalog/infrastructure/: __init__.py
catalog-service/src/catalog/infrastructure/config/: settings.py
catalog-service/tests/: conftest.py
catalog-service/tests/api/: conftest.py  test_books_api.py  test_health.py
catalog-service/tests/integration/adapters/: test_db_adapter.py  test_messaging_adapter.py
catalog-service/tests/unit/application/: test_add_book_use_case.py  test_book_repository_port.py  test_book_stock_repository_port.py  test_message_publisher_port.py  test_query_use_cases.py  test_rabbitmq_consumer.py  test_rabbitmq_publisher.py  test_stock_use_cases.py
catalog-service/tests/unit/domain/: test_book.py  test_book_stock.py  test_isbn.py
loan-service/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml  pytest.ini
loan-service/src/loan/: __init__.py  main.py
loan-service/src/loan/application/: activate_loan_use_case.py  get_loan_use_case.py  get_user_by_email_use_case.py  list_loans_use_case.py  list_overdue_loans_use_case.py  register_user_use_case.py  reject_loan_use_case.py  request_loan_use_case.py  return_loan_use_case.py
loan-service/src/loan/config/: settings.py
loan-service/src/loan/domain/: isbn.py  loan.py  loan_status.py  user.py
loan-service/tests/: conftest.py
loan-service/tests/api/: conftest.py  test_health.py  test_loans_api.py  test_users_api.py
loan-service/tests/integration/adapters/: test_db_adapter.py  test_messaging_adapter.py
loan-service/tests/unit/application/: test_get_user_by_email_use_case.py  test_infrastructure_utils.py  test_loan_lifecycle_use_cases.py  test_loan_repository_port.py  test_message_publisher_port.py  test_rabbitmq_consumer.py  test_rabbitmq_publisher.py  test_register_user_use_case.py  test_request_loan_use_case.py  test_user_repository_port.py
loan-service/tests/unit/domain/: test_isbn.py  test_loan.py  test_user.py
(+97 files in other folders)
