[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan"]

[project]
name = "loan-service"
version = "0.1.0"
description = "LibraryHub – Loan Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aio-pika>=9.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "testcontainers>=4.4",
    "pika>=1.3.2",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "mutmut>=2.4",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/loan"]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mutmut]
paths_to_mutate = "src/loan/domain/,src/loan/application/"
runner = "python -m pytest tests/unit/ -x -q --no-cov"
tests_dir = "tests/unit/"
